Tadukoo JSON
- Added Tadukoo JSON code + JUnit testing
- This is probably all the coding for Alpha v.0.1, but I need to make changes including moving the repository and adding the license and readme before officially releasing it